check for duplicate words using the regexp /\(\<\S\+\>\)\(\_\s\+\<\1\>\)\+

--- a/expe.tex
+++ b/expe.tex
@@ -26,11 +26,11 @@ The voltage at the emitter was 15-20 V, and its polarity was modulated at the fr
 
 %}}}
 \paragraph{Vacuum chamber and sample holder}%{{{
-The diameter of the active region on the TeraSED emitter was comparable with the longer-wavelength components of of the THz pulses, so the beam diffraction led to a broad angle of the terahertz emission, of the order of 0.5 radian. Therefore, the waves were reflected at an ellipsoidal % TODO check if it was not paraboloidal
+The diameter of the active region on the TeraSED emitter was comparable with the longer-wavelength components of the THz pulses, so the beam diffraction led to a broad angle of the terahertz emission, of the order of 0.5 radian. Therefore, the waves were reflected at an ellipsoidal % TODO check if it was not paraboloidal
  mirror and refocused at the sample. Upon passing through it, they diffracted again and were collected by an identical ellipsoidal mirror and focused at the detector. 
 To allow enough clearance for a bigger instrumentation surrounding a sample, such as a liquid-helium cryostat or a heating furnace, the ellipsoidal mirrors were separated by 0.3 m and the whole beam path approached 0.6 m. % TODO check with a ruler
 
-Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air in a significant concentration. The absorption forms clear notches in the terahertz transmittance spectra, for instance around 0.62, 0.75, 1.07 and 1.41 THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In the time domain, the absorption manifests itself as a exponentially decaying ringdown. %that has polarity opposite to the main THz peak.
+Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air in a significant concentration. The absorption forms clear notches in the terahertz transmittance spectra, for instance around 0.62, 0.75, 1.07 and 1.41~THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In the time domain, the absorption manifests itself as a exponentially decaying ringdown. %that has polarity opposite to the main THz peak.
 % TODO figure from my web
 In order to avoid such a signal deformation,
 the whole terahertz wave path has to be in an environment free of water vapour, and the fastest way to reliably achieve this was to enclose the emitter, mirrors, sample and detector in a vacuum chamber evacuated by a two-stage rotary pump. 
@@ -73,7 +73,7 @@ By measuring the references of the thin and thick sapphires separately, the spec
 %defines the temporal separation between the main pulse and the first echo.  The reflectance and transmittance of the sample can be simply reconstructed using numerical deconvolution. The results of this method were, unfortunately, less than ideal. Among the reasons may be the possible asymmetry of the studied layer between the slabs, beam divergence and very low signal of both transmittance and particularly reflectance in the stop-bands of the sample.
 
 To retrieve the characteristics of the sample, i.e. $t(f)$ and $r_S(f)$, the overall transmitted time-domain waveform of the sapphire-sample-sapphire structure has to be split into two parts that correspond to the direct pass, and the first echo arising from the pulse reflecting back and forth  in the thin sapphire.
-The double propagation delay through 3 mm of the thinner sapphire is roughly 70 ps, which limits the spectral resolution to 14 GHz. All spectral features in the sample transmittance must be significantly broader than this value. Otherwise they could not be resolved, and even more importantly, their temporal ringdown would overlap in the time domain with the following echo and produce spurious results. Using a thicker sapphire could improve spectral resolution of this method, however it conflicts with the requirements of the terahertz beam fitting into the area of the sample \cite{nemec2009tunable} and of reducing the error caused by beam diffraction as noted in the following paragraph.
+The double propagation delay through 3 mm of the thinner sapphire is roughly 70 ps, which limits the spectral resolution to 14~GHz. All spectral features in the sample transmittance must be significantly broader than this value. Otherwise they could not be resolved, and even more importantly, their temporal ringdown would overlap in the time domain with the following echo and produce spurious results. Using a thicker sapphire could improve spectral resolution of this method, however it conflicts with the requirements of the terahertz beam fitting into the area of the sample \cite{nemec2009tunable} and of reducing the error caused by beam diffraction as noted in the following paragraph.
 
 %}}}
 \paragraph{Limitations of the scheme} %{{{
@@ -84,7 +84,7 @@ from the numerically predicted results, which were moreover sensitive to subtle 
 The terahertz beam is relatively tightly focused, and the focus of the echoes is longitudinally displaced compared to the focus of the first pulse. 
 The deconvolution algorithm can compensate for slight focus displacement by changing the amplitude  of different frequency components, or shifting them in phase. 
 
-However, due to the hyperbolic shape of the gaussian beam, with its Rayleigh length $z_{R}$ being similar to the sapphire thickness\footnote{As an approximate example, for the main frequency component $f = 1.5$ THz with wavelength $\lambda = c / f \approx 200$~$\upmu$m, for $\vartheta \lesssim 0.15$ rad as an estimated divergence of the beam from its axis, the Rayleigh half-length of a gaussian beam would be $z_{R} = \frac{\lambda}{\pi \vartheta^{2}} \gtrsim 2.8$ mm, i.e. roughly the thickness of the thinner sapphire.}, the overall effect of two sapphires can not be linearly compensated from two separate measurements of each of them.} 
+However, due to the hyperbolic shape of the gaussian beam, with its Rayleigh length $z_{R}$ being similar to the sapphire thickness\footnote{As an approximate example, for the main frequency component $f =$ 1.5~THz with wavelength $\lambda = c / f \approx 200$~$\upmu$m, for $\vartheta \lesssim 0.15$ rad as an estimated divergence of the beam from its axis, the Rayleigh half-length of a gaussian beam would be $z_{R} = \frac{\lambda}{\pi \vartheta^{2}} \gtrsim 2.8$ mm, i.e. roughly the thickness of the thinner sapphire.}, the overall effect of two sapphires can not be linearly compensated from two separate measurements of each of them.} 
  \item{The possible asymmetry of the sample with regard to the beam axis can substantially bias the measured reflectance. This happened during the characterisation of the dielectric spheres, when the sapphire distance was defined by a $\approx$60$\upmu$m teflon spacer. The nonuniform size of the resonators required us to attach them to one of the sapphire windows. While the spheres with the 60$\upmu$m diameter were placed symmetrically in the gap, the smaller spheres had an asymmetric position. Since the latter have higher resonance frequencies, the effect of asymmetry was probably also frequency dependent. } 
  \item{The sapphire slabs can influence the near field of resonances in some samples, c.f. Sect. \ref{par_nearfield}. This error should not be significant in transversally homogeneous samples (i.e. slabs), nor in samples that are made of dielectrics with much higher permittivity than that of sapphire. However for some samples, such as metallic resonators, the spectra are be completely changed in the vicinity of a dielectric (see its application on a fishnet sample in Fig. 4.19 in Ref. \cite{yahiaoui2011phd}). }
  \item{Finally, it follows from Eq. (\ref{eq_Neff}) that reliable reflection data can only be retrieved at frequencies where also the transmittance amplitude is strong enough for the signal not to be dominated by noise. }
@@ -205,7 +205,7 @@ This source of error is probably similarly important as another one, arising fro
 
 \section{Laser cutting}
 \paragraph{Fabrication of dielectric bars}%{{{
-Dielectric or metallic structures can be made by cutting a thin polished slab of the given material. Electromagnetic waves with a frequency of  1 THz have a free-space wavelength of 0.3 mm. Periodic structures designed to operate in this range have their unit cells of a similar size or less, and their finest features are usually in the order of 10-20 $\upmu$m. 
+Dielectric or metallic structures can be made by cutting a thin polished slab of the given material. Electromagnetic waves with a frequency of  1~THz have a free-space wavelength of 0.3 mm. Periodic structures designed to operate in this range have their unit cells of a similar size or less, and their finest features are usually in the order of 10-20 $\upmu$m. 
 
 The sample already shown in Fig. \ref{fg_STO_bar_rt} consisted of bars from strontium titanate (SrTiO$_{3}$) with a rectangular cross-section (see Fig. \ref{fg_STO_bar_geom}), where a structure with 10--30 $\upmu$m lateral bar dimensions was engraved into a thin slab of the dielectric of a similar thickness \cite{yahiaoui2011tunable}.
 
@@ -242,12 +242,12 @@ Cutting the foil into free-standing wire array was however not successful since 
 \paragraph{Difference between sieves and fishnets}%{{{
 The meshes were made for two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}\index{metamaterial!fishnet!fabrication}, which are predicted to exhibit a negative index of refraction (see Sect. \ref{section_fishnet}). The difference between these applications is subtle; the meshes intended as sieves would surely exhibit a resonance in the terahertz range. 
 
-The optimum  size range for the titanium dioxide spheres resonating around 1 THz is around 30--60 $\upmu$m, which determined the hole diameter of sieves. To maintain mechanical robustness, the periodicity in sieves was kept much larger than the hole diameter, usually 300$\times$300 $\upmu$m, and the thickness was chosen as 20 or 30 $\upmu$m.
+The optimum  size range for the titanium dioxide spheres resonating around 1~THz is around 30--60 $\upmu$m, which determined the hole diameter of sieves. To maintain mechanical robustness, the periodicity in sieves was kept much larger than the hole diameter, usually 300$\times$300 $\upmu$m, and the thickness was chosen as 20 or 30 $\upmu$m.
 The fishnets had the same periodicity as sieves, and the hole dimensions were chosen between 150 and 280 $\upmu$m. 
 For cleaner cutting, a thinner stainless foil was used, with a thickness of 5 $\upmu$m.
 
 % TODO
-%To achieve the required precision of sieving, we fabricated the sieves by femtosecond laser drilling of 20--30 $\upmu$m thick stainless steel steel foil
+%To achieve the required precision of sieving, we fabricated the sieves by femtosecond laser drilling of 20--30 $\upmu$m thick stainless steel foil
 %These sieves then were employed in a device that subjected the microsphere sample to acoustic vibrations, improving the speed of the demanding sieving process to acceptable level
 
 %}}}
